--- a/css/default.css
+++ b/css/default.css
@@ -1480,7 +1480,9 @@ footer hr {
 	color: #000;
 }
 
-.architect-locations a {
+.architect-locations a,
+.matsumoto-links a,
+.spaced-links a {
 	margin: 0 5px;
 }
 
@@ -2187,7 +2189,7 @@ ul#ticker {
 	border-radius: 1px;
 }
 
-.donate-btn:hover {
+.donate-btn:hover  {
 	background-color: rgb(186, 1, 1)!important;
 	transition: 200ms linear;
 }
@@ -2330,7 +2332,12 @@ form.payment select {
 	padding: 8px 12px;
 }
 
-form.payment input[type="submit"] {
+.donate-container {
+	margin-top: 50px;
+}
+
+form.payment input[type="submit"],
+.body-donate-btn {
 	border: 2px solid rgb(233, 2, 2);
 	padding: 8px 20px;
 	color: #fff;
@@ -2339,7 +2346,8 @@ form.payment input[type="submit"] {
 	transition: 200ms linear;
 }
 
-form.payment input[type="submit"]:hover {
+form.payment input[type="submit"]:hover,
+.body-donate-btn:hover {
 	background: #fff;
 	color: rgb(233, 2, 2);
 	transition: 200ms linear;
@@ -2356,6 +2364,10 @@ form.payment input[type="submit"]:hover {
 .t4a-events div.border-top,
 .architect-movies div.border-top {
 	padding-top: 40px;
+}
+
+.matsumoto-content {
+	padding: 20px 0;
 }
 
 /* media queries  */
