--- a/css/default.css
+++ b/css/default.css
@@ -963,7 +963,7 @@ header.homepage {
 	font-size: 14px;
 	text-align: left;
 	padding-left: 0;
-	margin-top: -26px;
+	margin-top: -30px;
 	text-transform: uppercase;
 	padding: 0 0 0 60px!important;
 	font-size: 12px!important;
@@ -2366,6 +2366,10 @@ form.payment input[type="submit"]:hover,
 
 .matsumoto-content {
 	padding: 20px 0;
+}
+
+.top-space {
+	margin-top: -23px;
 }
 
 /* media queries  */
