--- a/css/default.css
+++ b/css/default.css
@@ -2372,6 +2372,112 @@ form.payment input[type="submit"]:hover,
 	margin-top: -23px;
 }
 
+.gsc-results-wrapper-overlay.gsc-results-wrapper-visible {
+	border: 2px solid #000!important;
+	font-family: 'Roboto', sans-serif!important;
+}
+
+.gsc-above-wrapper-area-container {
+	margin: 10px 0;
+	color: #222!important;
+}
+
+.gsc-tabHeader.gsc-inline-block.gsc-tabhActive {
+	color: rgb(233, 2, 2)!important;
+	border-color: rgb(233, 2, 2)!important;
+}
+
+.gsc-result-info {
+	padding: 0!important;
+}
+
+.gs-webResult.gs-result {
+	text-align: left!important;
+}
+
+.gsc-webResult.gsc-result {
+	padding: 20px 0!important;
+	border-bottom: 1px solid #e9e9e9!important;
+}
+
+.gsc-cursor-page {
+	color: #222!important;
+}
+
+.gsc-cursor-page.gsc-cursor-current-page {
+	color: rgb(233, 2, 2)!important;
+}
+.gcsc-more-maybe-branding-root {
+	padding-left: 130px!important
+}
+
+.gs-webResult.gs-result a.gs-title:link, 
+.gs-webResult.gs-result a.gs-title:link b, 
+.gs-imageResult a.gs-title:link, 
+.gs-imageResult a.gs-title:link,
+.gs-webResult.gs-result a.gs-title:visited, 
+.gs-webResult.gs-result a.gs-title:visited b, 
+.gs-imageResult a.gs-title:visited, 
+.gs-imageResult a.gs-title:visited b  {
+	/* color: rgb(233, 2, 2)!important; */
+	color: #000!important;
+	font-family: 'Roboto', sans-serif!important;
+}
+
+a.gs-title, 
+a.gs-title {
+	position: relative!important;
+	color:#000!important;
+	text-decoration: none!important;
+}
+
+a.gs-title:hover, 
+a.gs-title:hover  {
+	color: #000!important;
+}
+
+a.gs-title::before, 
+a.gs-title::before {
+	content: ""!important;
+	position: absolute!important;
+	width: 100%!important;
+	height: 2px!important;
+	bottom: -2px!important;
+	left: 0!important;
+	background-color: #000!important;
+	visibility: hidden!important;
+	transform: scaleX(0)!important;
+	transition: all 0.3s ease-in-out 0s!important;
+}
+
+a.gs-title:hover::before, 
+a.gs-title:hover::before {
+	visibility: visible!important;
+	transform: scaleX(1)!important;
+}
+
+
+.gs-webResult div.gs-visibleUrl {
+	color: #222!important;
+	font-style: italic!important;
+}
+
+.gs-webResult .gs-snippet {
+	font-family: 'Roboto', sans-serif!important;
+}
+
+.gcsc-find-more-on-google {
+	color: #222!important;
+}
+
+.gcsc-find-more-on-google-magnifier {
+	fill: #222!important;
+}
+
+.gcsc-find-more-on-google-query {
+	color: rgb(233, 2, 2)!important;
+}
+
 /* media queries  */
 @media (max-width: 1076px){
 	iframe {
